# MasseuseShop-Backend

./: .gitignore  README.md  manage.py  pyproject.toml  requirements.txt
accounts/: cookie_jwt.py  models.py  serializers.py  urls.py  views.py
accounts/migrations/: 0001_initial.py
bookings/: models.py  serializers.py  urls.py  views.py
bookings/migrations/: 0001_initial.py  0002_appointment_payment_method.py
common/: permission.py
dashboard/: models.py  services.py  urls.py  views.py
dashboard/migrations/: 0001_initial.py
masseuseshop/: asgi.py  settings.py  urls.py  wsgi.py
payments/: controllers.py  urls.py
reviews/: models.py  serializers.py  urls.py  views.py
reviews/migrations/: 0001_initial.py
services/: models.py  serializers.py  urls.py  views.py
services/migrations/: 0001_initial.py
